--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "jsonwebtoken": "^8.5.1",
+    "jose": "^2.0.2",
     "pg": "^8.3.3",
     "ts-node": "^9.0.0"
   },
@@ -23,7 +23,6 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/express-validator": "^3.0.0",
-    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.11.2",
     "@types/pg": "^7.14.5",
     "nodemon": "^2.0.4",
